--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -7,3 +7,5 @@ jobs:
     steps:
     - name: Say Hello
       run: echo "Hello from GitHub Actions!"
+    - run: echo "I'll list files."
+    - run: ls -al
